feat: add shared folder functionality and make ejs views more flexible
 * feat: add shared folder file download

 * feat: add GET search shared folder endpoint

 * feat(flexible layout): implement factory method for shared folder view

 * feat(flexible layout): create SharedFolderViewModel and factory method

 * feat(flexible layout): implement the VM related to user search in drive controller

 * feat(flexible layout): implement the VM related to link creation in drive controller

 * feat(flexible layout): create LinkCreatedViewModel and factory method
Kinda testing out the waters with this one.
Get the feel for this kind of workflow.
This is for the more specific scenario when the user shares a folder and link is generated.

 * feat(flexible layout): create UserSearchResultsViewModel with factory method

 * feat(flexible layout): create BaseSearchResultsViewModel that inherits BaseDriveViewModel
This VM contains only the search and content layout related actions.
Meaning you cant create a folder or add a file when you are seeing search results.

 * refactor(flexible layout): enhance /drive page rendering with UserDriveViewModel

 * refactor(flexible layout): change ejs render logic to be mainly based on params
This is for the layouts and the drive.ejs and search.ejs views.
Now things are more flexible.

 * refactor(flexible layout): create a drive page main layout
The layout is based on the drive ejs view.
The difference is that it contains params for:
- navigation,
- sidebar
- main content
- and dialog

Params are HTML unescaped specifically for ejs partials and components.

 * feat: create UserDriveViewModel interface and factory function with defaults

 * feat: add BaseDriveViewModel interface and related types for drive functionality

 * refactor(flexible layout): move dialog related partials to their specific section
The copy-folder-link and share-folder-form partials will only appear in the /drive routes.
So they have been placed in partials/drive/

 * feat(

--- a/src/views/components/card-with-actions.ejs
+++ b/src/views/components/card-with-actions.ejs
@@ -1,9 +1,9 @@
-<div class="position relative h-full">
+<div class="relative h-full">
   <a
     aria-label="<%= displayName %> <%= item.name %>"
     href="<%= linkHref %>"
     title="<%= linkTitle %>"
-    class="h-full rounded-lg shadow-md hover:shadow-xl bg-white border border-violet-200 p-4 flex flex-col gap-2 items-center transition-shadow"
+    class="h-full rounded-lg shadow-md hover:shadow-xl bg-white hover:bg-gray-100 border border-violet-200 p-4 flex flex-col gap-2 items-center transition-shadow"
   >
 
     <!-- Item icon -->
@@ -102,26 +102,28 @@
   </a>
 
   <!-- Options dropdown -->
-  <div
-    id="<%= type %>-options-<%= item.id %>"
-    class="hover:bg-gray-400 p-1 rounded absolute top-0 right-0 z-50"
-  >
-    <drop-down id="<%= type %>-button-<%= item.id %>">
-      <drop-down-action class="bg-gray-100 shadow-md">
-        <a onclick="startEditFromOptions(event, '<%= type %>', '<%= item.id %>')">
-          Rename...
-        </a>
-      </drop-down-action>
-      <drop-down-action class="bg-gray-100 shadow-md">
-        <form
-          id="delete-<%= type %>-form-<%= item.id %>"
-          action="<%= deleteAction %>"
-          method="post"
-          onsubmit="return confirm(`<%= deleteConfirmMessage %>`)"
-        >
-          <button type="submit">Delete...</button>
-        </form>
-      </drop-down-action>
-    </drop-down>
-  </div>
+  <% if (locals.showOptions) { %>
+    <div
+      id="<%= type %>-options-<%= item.id %>"
+      class="hover:bg-gray-400 p-1 rounded absolute top-0 right-0"
+    >
+      <drop-down id="<%= type %>-button-<%= item.id %>">
+        <drop-down-action class="bg-gray-100 shadow-md">
+          <a onclick="startEditFromOptions(event, '<%= type %>', '<%= item.id %>')">
+            Rename...
+          </a>
+        </drop-down-action>
+        <drop-down-action class="bg-gray-100 shadow-md">
+          <form
+            id="delete-<%= type %>-form-<%= item.id %>"
+            action="<%= deleteAction %>"
+            method="post"
+            onsubmit="return confirm(`<%= deleteConfirmMessage %>`)"
+          >
+            <button type="submit">Delete...</button>
+          </form>
+        </drop-down-action>
+      </drop-down>
+    </div>
+  <% } %>
 </div>
