--- a/src/views/layouts/drive/grid.ejs
+++ b/src/views/layouts/drive/grid.ejs
@@ -1,33 +1,40 @@
 <ul class="grid auto-rows-max grid-cols-2 md:grid-cols-4 gap-5 overflow-y-auto content-start custom-col">
-    <% if (locals.currentFolder) { %>
-            <li>
-                <a href="<%= currentFolder.parentFolder ? `/drive/folder/${currentFolder.parentFolder.id}` : '/drive' %>" class="h-full rounded-lg shadow-md hover:shadow-xl bg-white border border-violet-100 p-4 flex flex-col items-center justify-center cursor-pointer transition-shadow">
-                    <div class="w-16 h-16 bg-gray-100 rounded flex flex-col items-center justify-center gap-2">
-                        <i class="fa fa-solid fa-level-up text-gray-500 text-2xl"></i>
-                    </div>
-                    <span class="font-medium text-xs text-center">Go back</span>
-                </a>
-            </li>
+    <!-- Go back link -->
+    <% if ( grid.canGoBack && grid.goBackLink && !(!grid.files?.length && !grid.folders?.length) ) { %>
+        <li>
+            <a href="<%= grid.goBackLink %>" class="h-full rounded-lg shadow-md hover:shadow-xl bg-white border border-violet-100 p-4 flex flex-col items-center justify-center cursor-pointer transition-shadow">
+                <div class="w-16 h-16 bg-gray-100 rounded flex flex-col items-center justify-center gap-2">
+                    <i class="fa fa-solid fa-level-up text-gray-500 text-2xl"></i>
+                </div>
+                <span class="font-medium text-xs text-center">Go back</span>
+            </a>
+        </li>
+    <% }  %> 
 
-        <!-- Subfolders     -->
-        <% currentFolder.subfolders?.forEach(folder => { %>
+    <!-- Folders -->
+    <% if(grid.folders) { %>
+        <% grid.folders.forEach(folder => { %>
             <li>
                 <%- include('../../components/card-with-actions', {
-                    type: 'folder',
+                    type: 'subdir',
                     item: folder,
-                    iconClass: 'fa fa-folder',
                     displayName: 'Folder',
+                    iconClass: 'fa fa-folder',
                     inputName: 'folder',
-                    linkHref: `/drive/folder/${folder.id}`,
-                    linkTitle: `See folder details for ${folder.name}`,
+                    linkHref: grid.sharedFolder ? `/public/${sharedFolder.id}/folder/${folder.id}` : `/drive/folder/${folder.id}`,
+                    linkTitle: `Open folder ${folder.name}`,
                     updateAction: `/drive/folder/${folder.id}?_method=PUT`,
                     deleteAction: `/drive/folder/${folder.id}?_method=DELETE`,
-                    deleteConfirmMessage: `Are you sure you want to delete the folder /${folder.name} ?\r\nThis action cannot be undone.`
+                    deleteConfirmMessage: `Are you sure you want to delete the folder /${folder.name} ?\r\nThis action cannot be undone.`,
+                    showOptions: grid.enableActions
                 }) %>
             </li>
         <% }) %>
-        <!-- Files     -->
-        <% currentFolder.files.forEach(file => { %>
+    <% }  %> 
+
+    <!-- Files     -->
+    <% if (grid.files) { %>
+        <% grid.files.forEach(file => { %>
             <li>
                 <%- include('../../components/card-with-actions', {
                     type: 'file',
@@ -35,33 +42,20 @@
                     iconClass: 'fa fa-file',
                     displayName: 'File',
                     inputName: 'file',
-                    linkHref: `/drive/folder/${currentFolder.id}/file/${file.id}`,
+                    linkHref: grid.sharedFolder ? `/public/${sharedFolder.id}/folder/${file.parentFolderId}/file/${file.id}` : 
+                    `/drive/folder/${file.parentFolderId}/file/${file.id}`,
                     linkTitle: `See file details for ${file.name}`,
-                    updateAction: `/drive/folder/${currentFolder.id}/file/${file.id}?_method=PUT`,
-                    deleteAction: `/drive/folder/${currentFolder.id}/file/${file.id}?_method=DELETE`,
-                    deleteConfirmMessage: `Are you sure you want to delete the file /${file.name} ?\r\nThis action cannot be undone.`
+                    updateAction: `/drive/folder/${file.parentFolderId}/file/${file.id}?_method=PUT`,
+                    deleteAction: `/drive/folder/${file.parentFolderId}/file/${file.id}?_method=DELETE`,
+                    deleteConfirmMessage: `Are you sure you want to delete the file /${file.name} ?\r\nThis action cannot be undone.`,
+                    showOptions: grid.enableActions
                 }) %>
             </li>
         <% }) %>
-        
-        <% } else if(locals.folders && locals.folders.length > 0) { %>
-            <% locals.folders.forEach(folder => { %>
-                <li>
-                    <%- include('../../components/card-with-actions', {
-                        type: 'subdir',
-                        item: folder,
-                        displayName: 'Folder',
-                        iconClass: 'fa fa-folder',
-                        inputName: 'folder',
-                        linkHref: `/drive/folder/${folder.id}`,
-                        linkTitle: `Open folder ${folder.name}`,
-                        updateAction: `/drive/folder/${folder.id}?_method=PUT`,
-                        deleteAction: `/drive/folder/${folder.id}?_method=DELETE`,
-                        deleteConfirmMessage: `Are you sure you want to delete the folder /${folder.name} ?\r\nThis action cannot be undone.`
-                    }) %>
-                </li>
-            <% }) %>
-        <% } else { %> 
+    <% } %>
+    
+    <!-- Empty folder placeholder -->
+    <% if ( !grid.files?.length && !grid.folders?.length ) { %>
         <li class="col-span-full">
             <div
             class=" h-full w-full rounded-lg bg-white border border-violet-100 p-20 flex flex-col gap-2 items-center justify-center "
@@ -70,12 +64,17 @@
                     <i class="fa fa-folder text-3xl text-gray-500"></i>
                 </div>
                 <h2 class="text-2xl font-bold text-gray-600">
-                    Your drive is empty.
+                    Folder empty
                 </h2>
                 <p class="text-gray-500 text-lg text-center">
-                    Get started by creating a new folder and uploading some files.
+                    No files or folders to display 
                 </p>
+                <a href="<%= grid.goBackLink %>">
+                    <button class="rounded-md bg-indigo-600 hover:bg-indigo-500 px-4 py-2 text-sm font-semibold text-white">
+                        Go back
+                    </button>
+                </a>
             </div>
         </li>
-        <% } %>
+    <% } %>
 </ul>
