--- a/src/views/components/item-with-actions.ejs
+++ b/src/views/components/item-with-actions.ejs
@@ -1,6 +1,8 @@
 <div
   class="flex items-center justify-between w-full border-b bg-gray-100 hover:bg-gray-300 rounded px-2 py-1"
 >
+
+  <!-- Rename Form -->
   <form
     id="update-<%= type %>-form-<%= item.id %>"
     class="max-w-full flex flex-wrap items-center gap-2"
@@ -40,6 +42,8 @@
       </button>
     </div>
   </form>
+
+  <!-- Item details -->
   <a class="flex-1" href="<%= linkHref %>" title="<%= linkTitle %>">
     <span
       id="<%= type %>-nav-button-<%= item.id %>"
@@ -49,6 +53,8 @@
       <span class="truncate max-w-[10ch]"><%- item.name %></span>
     </span>
   </a>
+
+  <!-- Options dropdown -->
   <div
     id="<%= type %>-options-<%= item.id %>"
     class="hover:bg-gray-400 p-1 rounded"
